Bug fixed on Cartographic Generalization connection. Not showing the square on the middle.

--- a/www/src/css/style.css
+++ b/www/src/css/style.css
@@ -229,6 +229,7 @@
 	margin-top: 20px;
 }
 
+.square-overlay,
 .triangle-endpoint {
 	z-index: 100;
 }
